2009-09-23  Piotr Fusik  <fox@scene.pl>
* win32/wasap/wasap.c: when opening file from the Explorer, close only error
  messages, not file information


2009-09-22  Piotr Fusik  <fox@scene.pl>
* java/ASAPApplet.java: ignore leading hash in colors


2009-09-21  Piotr Fusik  <fox@scene.pl>
* java/ASAP.ppjava, java/ASAPApplet.java, java/USAGE: changed applet interface

* win32/wasap/wasap.c: close the open dialog or error message when opening
  file from the Explorer. Dragging a corrupted file to wasap.exe ten times
  caused a crash (reported by Ramos).


2009-09-18  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: grep version numbers from different files

* win32/setup/asap.wxs: include version in the title; high compression

* acpu.c: fixed CLV with ACPU_NO_DECIMAL; simplified ARR

* asap.c, asap_internal.h, acpu.c, apokeysnd.c, csharp/ASAP.ppcs,
  java/ASAP.ppjava: minor refactoring, added some comments


2009-09-17  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap_internal.h, apokeysnd.c, csharp/ASAP.ppcs,
  java/ASAP.ppjava: added GTIA CONSOL sound emulation

* Makefile, install-sh, win32/Makefile:
  replaced "./install-sh" with "mkdir -p" and "install" because:
  - the ASAP directory can be "noexec"
  - one might be afraid of running "install-sh" as "root"
  - many "mkdir -p" are still shorter than "install-sh"
  - "mkdir -p" should work on new systems

* INSTALL: MADS


2009-09-16  Piotr Fusik  <fox@scene.pl>
* asap.c: detect DLT subsongs and duration, convert to and from SAP


2009-09-16  Marek Konopka  <konop11@poczta.onet.pl>
* players/dlt.as8: disabled MADS warnings


2009-09-15  Piotr Fusik  <fox@scene.pl>
* Makefile: changed variable references from braces to parentheses - to make
  it consistent with other Makefiles and get highlighting in SciTE

* CREDITS, Makefile, README, asap.c, asap.h, asap2wav.c, asap_internal.h,
  csharp/asap2wav.cs, gsplayer/gspasap.c, java/ASAP2WAV.java, players/dlt.as8,