@@ -89,6 +89,10 @@ void trace_cpu(const ASAP_State *ast, int pc, int a, int x, int y, int s, int nz
 
 #define NEVER                   0x800000
 
+#define DELTA_SHIFT_POKEY       20
+#define DELTA_SHIFT_GTIA        20
+#define DELTA_SHIFT_COVOX       17
+
 /* 6502 player types */
 #define ASAP_TYPE_SAP_B         1
 #define ASAP_TYPE_SAP_C         2
