@@ -89,6 +89,7 @@ namespace ASAP
 		internal int music;
 		internal int init;
 		internal int player;
+		internal int covox_addr;
 		internal int header_len;
 		internal readonly byte[] song_pos = new byte[128];
 	}
@@ -153,6 +154,7 @@ namespace ASAP
 		internal int irqst;
 		internal int extra_pokey_mask;
 		internal int consol;
+		internal readonly byte[] covox = new byte[4];
 		internal readonly PokeyState base_pokey = new PokeyState();
 		internal readonly PokeyState extra_pokey = new PokeyState();
 		internal int sample_offset;
@@ -184,7 +186,7 @@ namespace ASAP
 
 		readonly ASAP_State ast = new ASAP_State();
 
-		public const string Version = "1.2.1";
+		public const string Version = "1.3.0";
 
 		public const int ModuleMax = 65000;
 
